--- a/HamedStack.Configuration/HamedStack.Configuration.csproj
+++ b/HamedStack.Configuration/HamedStack.Configuration.csproj
@@ -13,7 +13,11 @@
         <RepositoryUrl>https://github.com/HamedStack/HamedStack.Configuration</RepositoryUrl>
         <PackageLicenseExpression>MIT</PackageLicenseExpression>
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
+        <PackageReadmeFile>README.md</PackageReadmeFile>
     </PropertyGroup>
+    <ItemGroup>
+        <None Include="..\README.md" Pack="true" PackagePath="\"/>
+    </ItemGroup>
     <ItemGroup>
         <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
         <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
